2007-09-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/utils.cc:
	* src/utils.h:
	* src/libgviewer/viewer-window.c:
	* src/tags/gnome-cmd-tags-doc.cc:
	* src/tags/gnome-cmd-tags-exiv2.cc:
	* src/tags/gnome-cmd-tags.cc:
	Replaced ARRAY_ELEMENTS with glib G_N_ELEMENTS macro

2007-09-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/tags/gnome-cmd-tags.cc:
	Fixed crash when building menu button for metatags

2007-09-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Fixed bug in GdkEventKey handling (improper use of g_ascii_is...(key_val))

2007-08-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.cc:
	Fixed build problem (incorrect #ifndef)

2007-08-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Replaced metatags[] array with its DICT<GnomeCmdTag,TagName> counterpart

2007-08-01  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.cc:
	Added button for copying metatags to clipboard

	* configure.in:
	Changed required exiv2 version to 0.14 or more

	* src/tags/gnome-cmd-tags-exiv2.cc:
	Set Image.Width & Image.Height metatags if available

2007-07-31  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags-exiv2.cc:
	Use exiv2 interpreted values

	* src/utils.h:
	Added join(coll,sep) function family

	* src/tags/gnome-cmd-tags.h:
	Added support for multiple tags in advrename

2007-07-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.cc:
	Make help button context (tab) aware

	* src/tags/gnome-cmd-tags.h:
	Fix for g++ 3.4 build

2007-07-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.cc:
	Make image metatags working in advrename again

	* src/tags/gnome-cmd-exiv2.cc:
	Yet another fix for Exif.Makernote

2007-07-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc: